# ros2-6dof-arm

./: README.md
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: display.launch.py
src/arm_description/meshes/: aluminum_servo_horn.stl  finger.stl  gripper_l_bracket.stl  gripper_palm.stl  gripper_palm_to_finger_large.stl  gripper_palm_to_finger_large_lo.stl  gripper_palm_to_finger_small.stl  l_type_servo_bracket.stl  long_u_type_servo_bracket.stl  mg996r_servo.stl  miniature_ball_radial_bearing.stl  multi_functional_servo_bracket.stl  u_type_robot_waist_bracket.stl
src/arm_description/rviz/: arm_display.rviz
src/arm_description/urdf/: arm.urdf.xacro
src/arm_driver/: package.xml  setup.py
src/arm_driver/arm_driver/: arm_driver_node.py  bridge_node.py  fake_controller_node.py  teleop_node.py
src/arm_moveit_config/: CMakeLists.txt  package.xml
src/arm_moveit_config/config/: arm.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
src/arm_moveit_config/launch/: moveit.launch.py
