<?xml version="1.0"?>
<package format="3">
  <name>arm_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt2 config for 6DOF arm</description>
  <maintainer email="sid@todo.todo">sid-jetson</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>